--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://hamzaalam.github.io/react-quiz-app/",
-  "name": "react-quiz-app",
+  "homepage": "https://iwense.github.io/giftquiz/",
+  "name": "giftquiz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
