--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://iwense.github.io/giftquiz/",
+  "homepage": "https://iwense.github.io/giftquiz",
   "name": "giftquiz",
   "version": "0.1.0",
   "private": true,
